--- a/Site.html
+++ b/Site.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>Dorine Paris</title>
+	<meta charset="utf-8" >
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<h1>Bienvenue sur mon premier site</h1>
-	<p> <img src="photo cv.jpg" alt="Photo Dorine Paris" title="Photo Dorine Paris"
+	<h1>Bienvenue sur mon CV</h1>
+	<p> <img class="circle-image" src="photo cv.jpg" alt="Photo Dorine Paris" title="Photo Dorine Paris"
 		width="200" height="200">
-	<p>Vous trouverez ici un aperçu de mes compétences et de mes tests</p>
+	<p>Vous trouverez ici un aperçu de mes compétences et de mes tests.</p>
 	<p>Vous pouvez <a href="CV Dorine Paris.pdf" download="CV Dorine Paris" target="_blank">télécharger mon CV</a> ou avoir un aperçu juste ci-dessous.</p>
 	<br>
 	<div>
@@ -25,6 +27,7 @@
 	</div>
 	<br>
 	<div>
+		<hr class="hr">
 	<h2>Compétences</h2>
 		<h3>Vente</h3>
 		<form>
@@ -70,6 +73,7 @@
 	</div>
 	<br>
 	<div>
+		<hr class="hr">
 	<h2>Formations</h2>
 	<p><b>Diplôme BTS Transport et Prestations Logistiques</b> au Lycée Gallieni de Toulouse en mai 2018.</p>
 	<p><b>Baccalauréat Littéraire</b> au Lycée Saint-Exupéry de Blagnac en juin 2016.</p>
@@ -86,4 +90,4 @@
 
 
 
-</html>	
+</html>
